Fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,26 @@
 body {
     margin: 0;
+    padding: 0;
 }
 
 header {
-    margin-bottom: 40px;
     position: absolute;
-    margin: 0 auto;
+    margin: 0 ;
     top: 0;
     width: 100%;
+    height: fit-content;
     background-color: #f0f8ff;
 }
 
 main {
-    margin-top: 150px;
+    margin-top: 160px;
+    margin-bottom: 100px;
+    width: 100%;
 }
 
 h1 {
     font-family: 'Baloo Bhaina 2', cursive;
+    font-size: 30pt;
     text-align: center;
 }
 
@@ -31,7 +35,7 @@ aside {
 }
 
 iframe {
-    display:flex;
+    align-items: center;
     margin-left: auto;
     margin-right: auto;
 }
@@ -39,9 +43,9 @@ iframe {
 footer {
     margin-top: 40px;
     position: fixed;
-    margin: 0 auto;
+    margin: 0;
     bottom: 0;
     width: 100%;
-    padding-bottom: 10px;
+    padding: 10px;
     background-color: aliceblue;
 }
